--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -17,4 +17,4 @@ jobs:
             - name: install
               run: npm ci
             - name: build
-              run npm run build
+              run: npm run build
